--- a/project-manager.html
+++ b/project-manager.html
@@ -40,11 +40,19 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://www.volvogroup.com/en-en/careers/job-listing/100267BR.html'>Public Project Manager G?teborg</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/servicenow/job/o5prbfwQ'>ServiceNow Careers - Principal Program Manager, Veteran Programs</a></h5> 
+<p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://latitudeinc.applytojob.com/apply/a9QTBbTEyT/Six-Sigma-Training-Project-Manager'>Six Sigma Training Project Manager - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698541416-technical-project-manager-with-agile-scrum-kanban'>BuzzClan LLC Technical Project Manager with Agile, Scrum & Kanban | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698541416-technical-project-manager-with-agile-scrum-kanban'>BuzzClan LLC Technical Project Manager with Agile, Scrum & Kanban | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -56,7 +64,7 @@
 <p><span class="badge badge-light">Denver, Colorado  New York, New York  Scottsdale, Arizona</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/46d91d393b0d-project-manager'>Project Manager</a></h5> 
+<h5><a href='https://kimmel-associates.breezy.hr/p/46d91d393b0d-project-manager'>Project Manager</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -234,7 +242,7 @@
 <p><span class="badge badge-light">North America Montreal Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/p3-americas/job/oWlsbfwE'>umlaut North America Careers - Quality Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/p3-americas/job/oWlsbfwE'>umlaut North America Careers - Quality Project Manager</a></h5> 
 <p><span class="badge badge-light">North America Montreal Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -258,7 +266,7 @@
 <p><span class="badge badge-light">New York, NY New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://veteransezinfoinc.applytojob.com/apply/wRJoJjrAHA/Sustainment-Project-Manager-Remote-Opportunity'>Sustainment Project Manager (Remote Opportunity) - Veterans EZ Info Inc - Career Page</a></h5> 
+<h5><a href='http://veteransezinfoinc.applytojob.com/apply/wRJoJjrAHA/Sustainment-Project-Manager-Remote-Opportunity'>Sustainment Project Manager (Remote Opportunity) - Veterans EZ Info Inc - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -322,11 +330,11 @@
 <p><span class="badge badge-light">California California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698515829-project-manager-automotive-service-solutions'>Bosch Group Project Manager Automotive Service Solutions | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698515829-project-manager-automotive-service-solutions'>Bosch Group Project Manager Automotive Service Solutions | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OceanSprayCranberriesInc/743999698515244-project-manager-product-development'>Ocean Spray Cranberries, Inc. Project Manager - Product Development | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/OceanSprayCranberriesInc/743999698515244-project-manager-product-development'>Ocean Spray Cranberries, Inc. Project Manager - Product Development | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -424,7 +432,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698487339-project-manager'>Bosch Group Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698487339-project-manager'>Bosch Group Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -436,15 +444,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nicesystems/job/o08rbfwu'>NICE Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light">Chicago, Illinois  Minneapolis, Minnesota  Chicago Minneapolis</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAv9VfwT&k=Job&j=o7Wsbfwq&__jvst=Employee+Referral&__jvsd=sddHGhwz&__jvsc=Twitter&bid=nDlooMw1'>Hobsons Careers - Agile Program Manager</a></h5> 
-<p><span class="badge badge-light">Arlington, VA Arlington</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
